--- a/app.css
+++ b/app.css
@@ -18,6 +18,9 @@ body{
     justify-content: center;
     align-items: center;
     min-height: 100%;
+    background-image: url("/images/bg-pattern-top-mobile.svg"), url("/images/bg-pattern-bottom-mobile.svg");
+    background-repeat: no-repeat;
+    background-position: top, bottom;
 }
 
 main{
