--- a/app.css
+++ b/app.css
@@ -56,6 +56,12 @@ main{
     text-align: center;
     color: var(--primary-color);
     font-weight: 700;
+    display: flex;
+    flex-direction: column;
+}
+
+.ratings  span{
+    padding: .1875rem 0;
 }
 
 .feedback div{
@@ -93,4 +99,10 @@ main{
 
 .personal img{
     width: 3.125rem;
+}
+
+@media (min-width: 1000px){
+    body{
+        background-image: url("/images/bg-pattern-top-desktop.svg"), url("/images/bg-pattern-bottom-desktop.svg");
+    }
 }
